social icons aligned and homepage title error corrected

--- a/src/assets/sass/app/style.scss
+++ b/src/assets/sass/app/style.scss
@@ -91,7 +91,7 @@
   z-index: 100;
   position: fixed;
   background-color: $body-bg;
-  top: 25%;
+  top: 40%;
   right: 0px;
   list-style-type: none;
   box-shadow: 0px 5px 15px 0px rgba(50, 50, 50, 0.5);
